# Saft

./: Cargo.toml  README.md
crates/saft/: Cargo.toml
crates/saft-bytecode/src/: chunk.rs  compiler.rs  natives.rs  op.rs  value.rs  vm.rs
crates/saft-cli/: Cargo.toml
crates/saft-cli/src/: main.rs
crates/saft-ir/src/: lowerer.rs
crates/saft-macro/src/: discover_tests.rs
crates/saft-syntax/src/: ast.rs  lex.rs  parser.rs  span.rs  token.rs
crates/saft/src/: lib.rs
res/query_test/: main.saft
res/query_test/lib/: asserts.saft
src/: ast.rs  eval.rs  lib.rs  main.rs  parser.lalrpop  parser_test.rs  query.rs  repl.rs  saft.rs  sexpr.rs  span.rs
src/cli/: args.rs  mod.rs  repl.rs
src/lang/: ast.rs  eval.rs  mod.rs  parser.lalrpop  saft.rs
src/tests/: golden_tests.rs  mod.rs  parser_test.rs  sexpr.rs
tests/: Cargo.toml
tests/res/tests/: item_order.saf  loop_.saf
tests/res/tests/exprs/: basic.saf  block.saf  if_.saf
tests/res/tests/exprs/ops/: add.saf  and.saf  assign.saf  comparison.saf  div.saf  idiv.saf  index.saf  mul.saf  neg.saf  not.saf  or.saf  pow.saf  sub.saf
tests/res/tests/items/functions/: assignment.saf  order.saf
tests/res/tests/misc/: block.saf  fib.saf  fib_loop.saf
tests/src/: lib.rs
